--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -94,6 +94,7 @@ article {
 }
 
 
+
 .img__expo {
   /*pour le coté responsive*/
   width: 25vw;
@@ -325,9 +326,14 @@ max-height: 100%;
 } */
 
 @media screen and (max-width: 768px) {
+
+  body {
+    margin: 0% 3% 0% 3%;
+  }
+  
   .navBar {
     position: fixed; /* Rend la navBar fixe */
-    top: 0; /* La positionne en bas de l'écran */
+    top: 0; /* La positionne en haut de l'écran */
     left: 50%; /* La déplace de 50% de la largeur de l'écran à partir de la gauche */
     transform: translateX(-50%); /* La décale de 50% de sa propre largeur vers la gauche pour la centrer */
     width: 100%; /* Définit la largeur à 100% de la largeur de l'écran */
@@ -336,10 +342,22 @@ max-height: 100%;
     padding: 2%; /* Ajuste le padding pour un meilleur look */
     margin: 0; /* Supprime les marges pour éviter tout décalage indésirable */
     background-color: rgba(141, 10, 10, 0.953); /* Vous pouvez ajuster la couleur de fond au besoin */
-    z-index: 100; /* S'assure que la navBar reste au-dessus des autres éléments de la page */
+    z-index: 50; /* S'assure que la navBar reste au-dessus des autres éléments de la page */
+  }
+
+  .btn-menu {
+    font-size: 1.5vw;
   }
 
 h1{
   margin-top: 8%;
+  font-size: 8vw;
+}
+
+h2 {
+  font-size: 6vw;
+}
+p {
+  font-size: 1.6em;
 }
 }
