--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -19,27 +19,50 @@
 </script>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const modal = document.getElementById('myModal');
-      const modalBtns = document.querySelectorAll('.openModalBtn');
-      const span = document.getElementsByClassName('close')[0];
-  
-      modalBtns.forEach(btn => {
+document.addEventListener('DOMContentLoaded', function () {
+    const modal = document.getElementById('myModal');
+    const modalBtns = document.querySelectorAll('.openModalBtn');
+    const span = document.getElementsByClassName('close')[0];
+    const form = modal.querySelector('form');
+
+    modalBtns.forEach(btn => {
         btn.addEventListener('click', function () {
-          modal.style.display = 'block';
+            modal.style.display = 'block';
         });
-      });
-  
-      span.onclick = function () {
-        modal.style.display = 'none';
-      }
-  
-      window.onclick = function (event) {
-        if (event.target === modal) {
-          modal.style.display = 'none';
-        }
-      }
     });
+
+    span.onclick = function () {
+        modal.style.display = 'none';
+    }
+
+    window.onclick = function (event) {
+        if (event.target === modal) {
+            modal.style.display = 'none';
+        }
+    }
+
+    // Gestionnaire d'événements pour la soumission du formulaire
+    form.addEventListener('submit', function (event) {
+        event.preventDefault(); // Empêche l'envoi du formulaire par défaut
+
+        // Récupérer la description depuis le champ textarea
+        const description = form.querySelector('#description').value;
+        // Récupérer l'ID depuis un attribut data sur le formulaire ou tout autre moyen approprié
+        const id = form.dataset.id;
+
+        // Effectuer une requête AJAX vers votre route Express avec les données du formulaire
+        const xhr = new XMLHttpRequest();
+        xhr.open('POST', '/updateArray/' + id, true);
+        xhr.setRequestHeader('Content-Type', 'application/json');
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4 && xhr.status === 200) {
+                // Traiter la réponse si nécessaire
+                console.log('Données mises à jour avec succès');
+            }
+        };
+        xhr.send(JSON.stringify({ description: description }));
+    });
+});
   </script>
 
 
