--- a/app/views/modal.description.ejs
+++ b/app/views/modal.description.ejs
@@ -1,10 +1,12 @@
 <!-- modal -->
 <div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <form action="/updateArray/<%= arrays[a].id %>" method="update">
-            <textarea name="description" id="description" cols="100" rows="20" placeholder="<%= arrays[a].description %>"></textarea>
-            <button>Modifier</button>
-        </form>
-    </div>
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <form action="/updateArray/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
+          <!-- Champ caché pour l'ID du tableau -->
+          <input type="hidden" name="id">
+          <textarea name="description" id="description" cols="100" rows="20" placeholder="<%= arrays.description %>"></textarea>
+          <button type="submit">Modifier</button>
+      </form>
+  </div>
 </div>
