--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ephesis&family=Skranji:wght@400;700&display=swap"
         rel="stylesheet">
-        <script src="../../utils.js"></script>
+
 
 
 
@@ -24,7 +24,7 @@
         <div class="navPosition">
              <nav>
                  <ul class="navBar">
-                     <a href="#accueil"><button class="btn-menu" onclick="redirectToHome()">Accueil</button></a> 
+                     <a href="#accueil"><button class="btn-menu" >Accueil</button></a> 
                      <a href="#tableaux"><button class="btn-menu">Tableaux</button></a>
                      <a href="#contact"><button class="btn-menu">Contactez-moi</button></a>
                  </ul>
