Ajout des controllers et datamapper pour la modif du prix et titre

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -80,6 +80,8 @@
     
     <!-- Inclure le template de modal -->
     <%- include('modal.description.ejs') %>
+    <%- include('modal.price.ejs') %>
+    <%- include('modal.title.ejs') %>
                     <article>
                         <div class="form-container" id="contact">
                             <form class="form" action="/robert" method="post">
