--- a/app/views/modal.description.ejs
+++ b/app/views/modal.description.ejs
@@ -2,7 +2,7 @@
 <div id="myModal" class="modal">
   <div class="modal-content">
       <span class="close">&times;</span>
-      <form action="/updateArray/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
+      <form action="/updateArrayDesc/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
           <!-- Champ caché pour l'ID du tableau -->
           <input type="hidden" name="id">
           <textarea name="description" id="description" cols="100" rows="20" placeholder="<%= arrays.description %>"></textarea>
