--- a/app/views/modal.title.ejs
+++ b/app/views/modal.title.ejs
@@ -2,10 +2,10 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <form action="/updateArrayPrice/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
+        <form action="/updateArrayTitle/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
             <!-- Champ caché pour l'ID du tableau -->
             <input type="hidden" name="id">
-            <textarea name="price" id="price" cols="100" rows="20" placeholder="<%= arrays.price %>"></textarea>
+            <textarea name="title" id="title" cols="100" rows="20" placeholder="<%= arrays.title %>"></textarea>
             <button type="submit">Modifier</button>
         </form>
     </div>
