ajustement des modals et script

--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -287,7 +287,7 @@ max-height: 100%;
 
 /* Contenu de la modal */
 .modal-content {
-  background-color: #d20303;
+  background-color: #940e0e;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
