--- a/app/views/modal.price.ejs
+++ b/app/views/modal.price.ejs
@@ -1,8 +1,8 @@
 <!-- modal -->
-<div id="myModal" class="modal">
+<div id="myModalPrice" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <form action="/updateArrayPrice/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
+        <span class="close" id="close-price">&times;</span>
+        <form id="formPrice" action="/updateArrayPrice/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
             <!-- Champ caché pour l'ID du tableau -->
             <input type="hidden" name="id">
             <textarea name="price" id="price" cols="100" rows="20" placeholder="<%= arrays.price %>"></textarea>
