--- a/app/views/modal.title.ejs
+++ b/app/views/modal.title.ejs
@@ -1,8 +1,8 @@
 <!-- modal -->
-<div id="myModal" class="modal">
+<div id="myModalTitle" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <form action="/updateArrayTitle/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
+        <span class="close" id="close-title">&times;</span>
+        <form id="formTitle" action="/updateArrayTitle/<%= arrays.id %>" method="post" data-id="<%= arrays.id %>">
             <!-- Champ caché pour l'ID du tableau -->
             <input type="hidden" name="id">
             <textarea name="title" id="title" cols="100" rows="20" placeholder="<%= arrays.title %>"></textarea>
