--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,110 +1,141 @@
 <%- include('./partials/header.ejs') %>
-    <div>
-        <article id="accueil">
-            <h2>Bienvenue dans mon expo !</h2>
+  <div>
+    <article id="accueil">
+      <h2>Bienvenue dans mon expo !</h2>
 
-            <p>Vous êtes sur mon espace artistique ! Je m'appelle Patricia, et ma passion pour la peinture a été
-                transmise
-                par mon père. Mon art s'exprime à travers une variété de toiles, où je suis capable de m'ajuster à
-                différents styles artistiques.
+      <p>Vous êtes sur mon espace artistique ! Je m'appelle Patricia, et ma passion pour la peinture a été
+        transmise
+        par mon père. Mon art s'exprime à travers une variété de toiles, où je suis capable de m'ajuster à
+        différents styles artistiques.
 
-                Que vous souhaitiez un portrait saisissant, un paysage envoûtant ou une toile captivante sur un thème
-                spécifique, je suis là pour donner vie à vos idées. Bien que j'apprécie travailler avec un modèle, je
-                suis
-                également en mesure de créer des œuvres sur mesure, adaptées à vos besoins et à votre vision artistique.
+        Que vous souhaitiez un portrait saisissant, un paysage envoûtant ou une toile captivante sur un thème
+        spécifique, je suis là pour donner vie à vos idées. Bien que j'apprécie travailler avec un modèle, je
+        suis
+        également en mesure de créer des œuvres sur mesure, adaptées à vos besoins et à votre vision artistique.
 
-                Offrir ou recevoir une toile personnalisée est un geste unique et significatif. Si vous recherchez le
-                cadeau
-                parfait ou souhaitez simplement embellir votre espace avec une œuvre exclusive, n'hésitez pas à <a
-                    href="#contact">me contacter</a>. Ensemble, nous pouvons donner vie à vos inspirations artistiques.
-            </p>
+        Offrir ou recevoir une toile personnalisée est un geste unique et significatif. Si vous recherchez le
+        cadeau
+        parfait ou souhaitez simplement embellir votre espace avec une œuvre exclusive, n'hésitez pas à <a
+          href="#contact">me contacter</a>. Ensemble, nous pouvons donner vie à vos inspirations artistiques.
+      </p>
 
-        </article>
+    </article>
+  </div>
+
+  <div class="div__img__home">
+    <div class="50">
+      <a href="/tableau/<%= randomUrl.id %>"><img class="img__expo" src="<%= randomUrl.url_img %>"
+          alt="<%= randomUrl.description %>" aria-label="<%= randomUrl.description %>"></a>
     </div>
-
-    <div class="div__img__home">
-        <div class="50">
-            <a href="/tableau/<%= randomUrl.id %>"><img class="img__expo" src="<%= randomUrl.url_img %>" 
-              alt="<%= randomUrl.description %>" aria-label="<%= randomUrl.description %>"></a>
-        </div>
-    </div>
+  </div>
 
 
-    <% for (let a = 0; a < arrays.length; a++) { %>
-      <% if (a % 2 === 0) { %>
-        <article id="tableaux" class="img-left">
-          <div class="littleArray">
-            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" 
+  <% for (let a=0; a < arrays.length; a++) { %>
+    <% if (a % 2===0) { %>
+      <article id="tableaux" class="img-left">
+        <div class="littleArray">
+          <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>"
               alt="<%= arrays[a].description %>" aria-label="<%= arrays[a].description %>"></a>
-          </div>
-          <div class="littleArray">
-            <p><%= arrays[a].title %></p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-              <button data-id="<%= arrays[a].id %>" class="openModalBtnTitle">Modifier</button>
+        </div>
+        <div class="littleArray">
+          <p>
+            <%= arrays[a].title %>
+          </p>
+          <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
+            <button data-id="<%= arrays[a].id %>" class="openModalBtnTitle">Modifier</button>
             <% } %>
-            <p><%= arrays[a].description %></p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-              <button data-id="<%= arrays[a].id %>" class="openModalBtn">Modifier</button>
-            <% } %>
-            <p>Prix: <%= arrays[a].price %> euros</p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-              <button data-id="<%= arrays[a].id %>" class="openModalBtnPrice">Modifier</button>
-            <% } %>
-          </div>
-        </article>
+              <p>
+                <%= arrays[a].description %>
+              </p>
+              <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
+                <button data-id="<%= arrays[a].id %>" class="openModalBtn">Modifier</button>
+                <% } %>
+                  <p>Prix: <%= arrays[a].price %> euros</p>
+                  <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
+                    <button data-id="<%= arrays[a].id %>" class="openModalBtnPrice">Modifier</button>
+                    <% } %>
+        </div>
+      </article>
 
       <% } else { %>
 
         <article class="img-right">
           <div class="littleArray">
-            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" 
-              alt="<%= arrays[a].description %>" aria-label="<%= arrays[a].description %>"></a>
+            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>"
+                alt="<%= arrays[a].description %>" aria-label="<%= arrays[a].description %>"></a>
           </div>
           <div class="littleArray">
-            <p><%= arrays[a].title %></p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+            <p>
+              <%= arrays[a].title %>
+            </p>
+            <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
               <button data-id="<%= arrays[a].id %>" class="openModalBtnTitle">Modifier</button>
-            <% } %>
-            <p><%= arrays[a].description %></p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-              <button class="openModalBtn" data-id="<%= arrays[a].id %>">Modifier</button>
-            <% } %>
-            <p>Prix: <%= arrays[a].price %> euros</p>
-            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-              <button data-id="<%= arrays[a].id %>" class="openModalBtnPrice">Modifier</button>
-            <% } %>
+              <% } %>
+                <p>
+                  <%= arrays[a].description %>
+                </p>
+                <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
+                  <button class="openModalBtn" data-id="<%= arrays[a].id %>">Modifier</button>
+                  <% } %>
+                    <p>Prix: <%= arrays[a].price %> euros</p>
+                    <% if (user && user.name && user.name===process.env.NAME_ADMIN) { %>
+                      <button data-id="<%= arrays[a].id %>" class="openModalBtnPrice">Modifier</button>
+                      <% } %>
           </div>
         </article>
-      <% } %>
-    <% } %>
-    
-    <!-- Inclure le template de modal -->
-    <%- include('modal.description.ejs') %>
-    <%- include('modal.title.ejs') %>
-    <%- include('modal.price.ejs') %>
-                    <article>
-                        <div class="form-container" id="contact">
-                            <form class="form" action="/robert" method="post">
-                                <h3>Contactez moi</h3>
-                                <div class="form-group">
-                                <input type="text" id="lastname" name="lastname" placeholder="Votre Nom" >
-                                </div>
-                                <div class="form-group">
-                                <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
-                                </div>
-                                <div class="form-group">
-                                <input type="text" id="mail" name="mail" required placeholder="Votre adresse mail*">
-                                </div>
-                                <div class="form-group">
-                                <textarea name="message" id="message" cols="100" rows="20" placeholder="Si vous préférez être rappeler. Merci de me laisser votre numéro de téléphone dans votre message"></textarea>
-                                 </div>
-                                 <div>
-                                <button id="button">Envoyez</button>
-                            </div>
-                            </form>
+        <% } %>
+          <% } %>
+
+            <!-- Inclure le template de modal -->
+            <%- include('modal.description.ejs') %>
+              <%- include('modal.title.ejs') %>
+                <%- include('modal.price.ejs') %>
+                  <article>
+                    <div class="form-container" id="contact">
+                      <form class="form" action="/robert" method="post" id="contactForm">
+                        <h3>Contactez moi</h3>
+                        <div class="form-group">
+                          <input type="text" id="lastname" name="lastname" placeholder="Votre Nom">
                         </div>
-                    </article>
+                        <div class="form-group">
+                          <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
+                        </div>
+                        <div class="form-group">
+                          <input type="text" id="mail" name="mail" required placeholder="Votre adresse mail*">
+                        </div>
+                        <div class="form-group">
+                          <textarea name="message" id="message" cols="100" rows="20"
+                            placeholder="Si vous préférez être rappeler. Merci de me laisser votre numéro de téléphone dans votre message"></textarea>
+                        </div>
+                        <!-- Bouton de soumission avec reCAPTCHA v3 -->
+                        <div>
+                          <button type="submit" id="submitBtn">Envoyez</button>
+                        </div>
+                      </form>
+
+                      <script>
+                        // Lorsque le formulaire est soumis
+                        document.getElementById('contactForm').addEventListener('submit', function(event) {
+                            event.preventDefault(); // Empêche la soumission immédiate du formulaire
+                
+                            grecaptcha.ready(function() {
+                                grecaptcha.execute('<%= RECAPTCHA_SITE_KEY %>', {action: 'submit'}).then(function(token) {
+                                    // Ajouter le token reCAPTCHA au formulaire
+                                    var recaptchaResponse = document.createElement('input');
+                                    recaptchaResponse.setAttribute('type', 'hidden');
+                                    recaptchaResponse.setAttribute('name', 'g-recaptcha-response');
+                                    recaptchaResponse.setAttribute('value', token);
+                                    document.getElementById('contactForm').appendChild(recaptchaResponse);
+                
+                                    // Soumettre le formulaire
+                                    document.getElementById('contactForm').submit();
+                                });
+                            });
+                        });
+                    </script>
+                    </div>
+                  </article>
 
 
 
- <%- include('./partials/footer.ejs') %>
+                  <%- include('./partials/footer.ejs') %>
