add favicon and boost performance for img

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -13,6 +13,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ephesis&family=Skranji:wght@400;700&display=swap"
         rel="stylesheet">
+
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_painting_16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_painting_32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon_painting_48.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/img/favicon_painting_64.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="/img/favicon_painting_128.png">
+  
+  <!-- Pour les appareils Apple -->
+  <link rel="apple-touch-icon" href="/img/favicon_painting_60.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/img/favicon_painting_152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_painting_180.png">
+
 </head>
 
 <body>
