--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -22,12 +22,11 @@
     </article>
   </div>
 
-  <div class="div__img__home">
-    <div class="50">
+  
+    <div class="div_img_expo">
       <a href="/tableau/<%= randomUrl.id %>"><img class="img__expo" src="<%= randomUrl.url_img %>"
           alt="<%= randomUrl.description %>" aria-label="<%= randomUrl.description %>"></a>
     </div>
-  </div>
 
 
   <% for (let a=0; a < arrays.length; a++) { %>
