--- a/app/views/adminPage.ejs
+++ b/app/views/adminPage.ejs
@@ -21,8 +21,7 @@
             <nav>
                 <ul>
                     <a href="/"><button class="btn-admin">Accueil</button></a>
-                    <button class="btn-admin">Ajouter un tableau</button>
-                    <button class="btn-admin">Tous les messages</button>
+                    <a href="/robert"><button class="btn-admin">Tous les messages</button></a>
                 </ul>
             </nav>
         </div>
@@ -53,7 +52,6 @@
                         <% messagesObject.forEach(message=> { %>
                             <div class="message-for-artist">
                                 <div class="message-left">
-                                    <input type="checkbox" name="selectedMessages" value="<%= message.id %>">
                                     <p>
                                         <%= message.firstname %>:
                                     </p>
