--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -89,51 +89,51 @@
             <%- include('modal.description.ejs') %>
               <%- include('modal.title.ejs') %>
                 <%- include('modal.price.ejs') %>
-                  <article>
-                    <div class="form-container" id="contact">
-                      <form class="form" action="/robert" method="post" id="contactForm">
-                        <h3>Contactez moi</h3>
-                        <div class="form-group">
-                          <input type="text" id="lastname" name="lastname" placeholder="Votre Nom">
-                        </div>
-                        <div class="form-group">
-                          <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
-                        </div>
-                        <div class="form-group">
-                          <input type="text" id="mail" name="mail" required placeholder="Votre adresse mail*">
-                        </div>
-                        <div class="form-group">
-                          <textarea name="message" id="message" cols="100" rows="20"
-                            placeholder="Si vous préférez être rappeler. Merci de me laisser votre numéro de téléphone dans votre message"></textarea>
-                        </div>
-                        <!-- Bouton de soumission avec reCAPTCHA v3 -->
-                        <div>
-                          <button type="submit" id="submitBtn">Envoyez</button>
-                        </div>
-                      </form>
-
-                      <script>
-                        // Lorsque le formulaire est soumis
-                        document.getElementById('contactForm').addEventListener('submit', function(event) {
-                            event.preventDefault(); // Empêche la soumission immédiate du formulaire
+                <article>
+                  <div class="form-container" id="contact">
+                    <form class="form" action="/robert" method="post" id="contactForm">
+                      <h3>Contactez moi</h3>
+                      <div class="form-group">
+                        <input type="text" id="lastname" name="lastname" placeholder="Votre Nom">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" id="mail" name="mail" required placeholder="Votre adresse mail*">
+                      </div>
+                      <div class="form-group">
+                        <textarea name="message" id="message" cols="100" rows="20"
+                          placeholder="Si vous préférez être rappelé, merci de me laisser votre numéro de téléphone dans votre message"></textarea>
+                      </div>
+                      <!-- Bouton de soumission avec reCAPTCHA v3 -->
+                      <div>
+                        <button type="submit" id="submitBtn">Envoyez</button>
+                      </div>
+                    </form>
                 
-                            grecaptcha.ready(function() {
-                                grecaptcha.execute('<%= RECAPTCHA_SITE_KEY %>', {action: 'submit'}).then(function(token) {
-                                    // Ajouter le token reCAPTCHA au formulaire
-                                    var recaptchaResponse = document.createElement('input');
-                                    recaptchaResponse.setAttribute('type', 'hidden');
-                                    recaptchaResponse.setAttribute('name', 'g-recaptcha-response');
-                                    recaptchaResponse.setAttribute('value', token);
-                                    document.getElementById('contactForm').appendChild(recaptchaResponse);
+                    <script>
+                      // Lorsque le formulaire est soumis
+                      document.getElementById('contactForm').addEventListener('submit', function(event) {
+                        event.preventDefault(); // Empêche la soumission immédiate du formulaire
                 
-                                    // Soumettre le formulaire
-                                    document.getElementById('contactForm').submit();
-                                });
-                            });
+                        grecaptcha.ready(function() {
+                          grecaptcha.execute('<%= RECAPTCHA_SITE_KEY %>', { action: 'submit' }).then(function(token) {
+                            // Ajouter le token reCAPTCHA au formulaire
+                            var recaptchaResponse = document.createElement('input');
+                            recaptchaResponse.setAttribute('type', 'hidden');
+                            recaptchaResponse.setAttribute('name', 'g-recaptcha-response');
+                            recaptchaResponse.setAttribute('value', token);
+                            document.getElementById('contactForm').appendChild(recaptchaResponse);
+                
+                            // Soumettre le formulaire
+                            document.getElementById('contactForm').submit();
+                          });
                         });
+                      });
                     </script>
-                    </div>
-                  </article>
+                  </div>
+                </article>
 
 
 
